tests/cases/ownership/ok/ownership-aggregate-field-move.ari
struct Holder {
  mut token: own i64,
  backup: own i64,
  mut count: i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn consume(value: own i64) -> i64 {
  drop value;
  return 5;
}

fn main() -> i64 {
  var holder = Holder { token: make_owned(1), backup: make_owned(2), count: 3 };
  let token = holder.token;
  holder.count = holder.count + 4;
  let score = consume(token) + holder.count;
  holder.token = make_owned(9);
  drop holder;
  return score;
}
